
//PATH="${PATH}:${HOME}/go/bin"
syntax = "proto3";

option go_package = "github.com/Ali-Assar/CashWatch/types";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message User {
    int32 iD = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4; 
    string encrypted_password = 5;
}

message GetUserRequest {
    int32 user_id = 1;
}

// Message representing a budget for a user
message Budget {
    int32 iD = 1;
    int32 user_id = 2; // Reference to the User ID
    string name = 3;
    double amount = 4;
    string category = 5; // Optional category for grouping budgets
    google.protobuf.Timestamp start_date = 6; // Start date of the budget
    google.protobuf.Timestamp end_date = 7; // End date of the budget (optional)
}

// Service for managing budgets
service BudgetService {
    rpc CreateBudget (User) returns (Budget);
    rpc GetBudget (GetBudgetRequest) returns (Budget);
    rpc UpdateBudget (UpdateBudgetRequest) returns (Budget);
    rpc DeleteBudget (DeleteBudgetRequest) returns (google.protobuf.Empty);
    rpc ListBudgets (ListBudgetsRequest) returns (stream Budget);
}

message GetBudgetRequest {
    int32 iD = 1;
}

message UpdateBudgetRequest {
    int32 iD = 1;
    Budget budget = 2;
}

message DeleteBudgetRequest {
    int32 iD = 1;
}

message ListBudgetsRequest {
    User user = 1;
}

message Expense {
    int32 iD = 1;
    int32 user_id = 2; // Reference to the User ID
    double amount = 3;
    string description = 4;
    string category = 5; // Category for expense
    google.protobuf.Timestamp date = 6;
    Budget budget = 7; // Optional reference to associated budget
}

// Service for managing expenses
service ExpenseService {
    rpc CreateExpense (CreateExpenseRequest) returns (Expense);
    rpc GetExpense (GetExpenseRequest) returns (Expense);
    rpc UpdateExpense (UpdateExpenseRequest) returns (Expense);
    rpc DeleteExpense (DeleteExpenseRequest) returns (google.protobuf.Empty);
    rpc ListExpenses (ListExpensesRequest) returns (stream Expense);
}

message CreateExpenseRequest {
    User user = 1;
    Expense expense = 2;
}

message GetExpenseRequest {
    int32 iD = 1;
}

message UpdateExpenseRequest {
    int32 iD = 1;
    Expense expense = 2;
}

message DeleteExpenseRequest {
    int32 iD = 1;
}

message ListExpensesRequest {
    User user = 1;
    google.protobuf.Timestamp start_date = 2;
    google.protobuf.Timestamp end_date = 3;
}
